--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "name": "cookie-stand-admin",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "latest",
