--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "cookie-stand-admin",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
